jenkins-deployment-chart/templates/consul-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -v -f docker-compose.yml -c -o jenkins-deployment-chart
    kompose.version: 1.24.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: consul
  name: consul
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: consul
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -v -f docker-compose.yml -c -o jenkins-deployment-chart
        kompose.version: 1.24.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/jenkins-net: "true"
        io.kompose.service: consul
    spec:
      containers:
        - args:
            - agent
            - -server
            - -bind
            - 0.0.0.0
            - -client
            - 0.0.0.0
            - -bootstrap-expect=1
          image: consul:latest
          name: consul
          ports:
            - containerPort: 8500
            - containerPort: 8300
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: consul-claim0
            - mountPath: /data
              name: consul-claim1
      restartPolicy: Always
      volumes:
        - name: consul-claim0
          persistentVolumeClaim:
            claimName: consul-claim0
        - name: consul-claim1
          persistentVolumeClaim:
            claimName: consul-claim1
status: {}
