jenkins-deployment-chart/templates/consul-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -v -f docker-compose.yml -c -o jenkins-deployment-chart
    kompose.version: 1.24.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: consul
  name: consul
spec:
  ports:
    - name: "8500"
      port: 8500
      targetPort: 8500
    - name: "8300"
      port: 8300
      targetPort: 8300
  selector:
    io.kompose.service: consul
status:
  loadBalancer: {}
