jenkins-deployment-chart/templates/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -v -f docker-compose.yml -c -o jenkins-deployment-chart
    kompose.version: 1.24.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: traefik
  name: traefik
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
    - name: "8090"
      port: 8090
      targetPort: 8080
  selector:
    io.kompose.service: traefik
status:
  loadBalancer: {}
