jenkins-deployment-chart/templates/vault-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -v -f docker-compose.yml -c -o jenkins-deployment-chart
    kompose.version: 1.24.0 (HEAD)
    traefik.enable: "true"
    traefik.http.routers.vault.rule: PathPrefix(`/`)
    traefik.http.services.vault.loadbalancer.server.port: "8200"
  creationTimestamp: null
  labels:
    io.kompose.service: vault
  name: vault
spec:
  ports:
    - name: "8200"
      port: 8200
      targetPort: 8200
  selector:
    io.kompose.service: vault
status:
  loadBalancer: {}
