jenkins-deployment-chart/templates/jenkins-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: jenkins-net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/jenkins-net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/jenkins-net: "true"
